<resources>
    <string name="app_name">Debt</string>
    <string name="google_sign_in_web_client_id">869684535880-hscde8qafqhbi842i78mcqbfc68qmf02.apps.googleusercontent.com</string>
    <string name="Tentar_novamente">Tentar novamente</string>
    <string name="Voce_nao_esta_conectado_a_internet_ou_a_data">Você não está conectado à internet ou a data do dispositivo está incorreta</string>
    <string name="Voce_cancelou_o_login">"Você cancelou o login"</string>
    <string name="Ha_mais_de_um_processo_de_login_em_andamento">"Há mais de um processo de login em andamento. Quantas vezes você apertou esse botão?"</string>
    <string name="O_login_falhou">"O login falhou. Código: {0}"</string>
    <string name="Houve_um_erro_ao_contactar_a_api_do_goole">"Houve um erro ao contactar a API do Google, verfique sua conexão e tente reiniciar o app.  Código: {0}"</string>
    <string name="Houve_um_erro_ao_autenticar_sua_conta">Houve um erro ao autenticar sua conta, tente novamente. Causa: {0}</string>
    <string name="Bem_vindo_X">Bem-vindo {0}</string>
    <string name="Nome_da_despesa">Nome da despesa</string>
    <string name="Valor_da_despesa">Valor da despesa</string>
    <string name="Data_de_pagamento">Data de pagamento (dd/mm/aaaa)</string>
    <string name="Nova_despesa">Nova despesa</string>
    <string name="Observacoes">Observações</string>
    <string name="Selecione_a_data_do_pagamento">Selecione a data do pagamento</string>
    <string name="Concluir">Concluir</string>
    <string name="Foi_paga_em_x">Foi paga em %1$s</string>
    <string name="Despesa_recorrente">Despesa recorrente</string>
    <string name="Fatura_de_cartao">Fatura de cartão</string>
    <string name="Poupanca">Poupança</string>
    <string name="Tipo_despesa">Tipo de despesa</string>
    <string name="Despesa_ocasional">Despesa ocasional</string>
    <string name="Recorrencia_opcional_">Recorrência: (opcional)</string>
    <string name="Dia_s">Dia(s)</string>
    <string name="Mes_es">Mês(es)</string>
    <string name="Ate">Até</string>
    <string name="Indeterminadamente">Indeterminadamente</string>
    <string name="Repetir">Repetir</string>
    <string name="Repetir_ate">Repetir até: (mm/aaaa)</string>
    <string name="Repetir_a_cada_x_y">Repetir a cada %1$s %2$s</string>
    <string name="Nao_repetir">Não repetir</string>
    <string name="Salvar">Salvar</string>
    <string name="Repetir_a_cada">Repetir a cada</string>
    <string name="Intervalo_entre_meses_nao_pode_ser_maior_que_x">O intervalo entre meses não pode ser maior que %1$s</string>
    <string name="Intervalo_entre_dias_nao_pode_ser_maior_que_x">O intervalo entre dias não pode ser maior que %1$s</string>
    <string name="Intervalo_entre_dias_nao_pode_ser_menor_que_x">O intervalo entre dias não pode ser menor que %1$s</string>
    <string name="Entrada_invalida">Entrada inválida</string>
    <string name="Selecione_dias_ou_meses_para_prosseguir">Selecione Dias ou Meses para prosseguir </string>
    <string name="Quando_foi_paga">Quando foi paga (dd/mm/aaaa)</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_soma">+</string>
    <string name="_sub">-</string>
    <string name="_mult">x</string>
    <string name="_div">÷</string>
    <string name="_porcent">%</string>
    <string name="_igual">=</string>
    <string name="_ponto">.</string>
    <string name="_apagar">⌫</string>
    <string name="Formula_invalida">Formula inválida</string>
    <string name="Resultado_deve_ser_um_numero_positivo_com">O valor deve ser positivo</string>
    <string name="Digite_o_valor_da_despesa">Digite o valor da despesa</string>
    <string name="A_despesa_se_repete_todos_os_meses_x">Repetir todos os meses, %1$s</string>
    <string name="A_despesa_se_repete_mes_sim_e_mes_nao_x">Repetir mês sim e mês não, %1$s</string>
    <string name="Repetir_a_cada_x_meses_x">Repetir a cada %1$s meses, %2$s</string>
    <string name="Repetir_a_cada_x_dias_x">Repetir a cada %1$s dias, %2$s</string>
    <string name="Selecione_um_tipo_de_recorrencia">Selecione um tipo de recorrência</string>
    <string name="O_nome_nao_pode_ser_maior_que_x">O nome nao pode ser maior que %1$d</string>
    <string name="O_nome_nao_pode_ficar_vazio">O nome nao pode ficar vazio</string>
    <string name="O_valor_da_despesa_nao_pode_ser_maior_que_x">O valor da despesa não pode ser maior que %1$s</string>
    <string name="O_valor_da_despesa_nao_pode_ser_menor_que_x">O valor da despesa não pode ser menor que %1$s</string>
    <string name="Verifique_a_data_de_pagamento_da_despesa">Verifique a data de pagamento da despesa</string>
    <string name="Verifique_a_data_em_que_a_despesa_foi_paga">Verifique a data em que a despesa foi paga</string>
    <string name="Valor_de_repeti_o_menor_que_o_permitido_para_meses">Valor de repetição menor que o permitido para meses</string>
    <string name="Valor_de_repeti_o_maior_que_o_permitido_para_meses">Valor de repetição maior que o permitido para meses</string>
    <string name="Valor_de_repeti_o_menor_que_o_permitido_para_dias">Valor de repetição menor que o permitido para dias</string>
    <string name="Valor_de_repeti_o_maior_que_o_permitido_para_dias">Valor de repetição maior que o permitido para dias</string>
    <string name="Selecione_a_data_limite_da_recorr_ncia">Selecione a data limite da recorrência</string>
    <string name="Paga">Paga</string>
    <string name="Ver_despesas">Ver despesas</string>
    <string name="Editar">Editar</string>
    <string name="Pagar">Pagar</string>
    <string name="Remover">Remover</string>
    <string name="Em_aberto">Em aberto</string>
    <string name="Variacoes_de_preco">Variações de preço</string>
    <string name="Vence_em_x_dias">Vence em %1$d dias</string>
    <string name="Atrasada_a_x_dias">Atrasada a %1$d dias</string>
    <string name="Vence_hoje">Vence hoje</string>
    <string name="Despesa_esta_paga">Despesa está paga</string>
    <string name="Deseja_mesmo_remover_x_essa_acao_nao_podera_ser_desfeita"><![CDATA[Deseja mesmo remover <b>%1$s?</b> Essa ação não poderá ser desfeita.]]></string>
    <string name="Por_favor_confirme">Por favor, confirme:</string>
    <string name="Cancelar">Cancelar</string>
    <string name="X_eh_uma_despesa_recorrente_deseja_remover_todas_as_copias_de_y_em_diante"><![CDATA[<b>%1$s</b> é uma despesa recorrente.\nDeseja remover todas as cópias de <b>%2$s</b> em diante?]]></string>
    <string name="De_x_em_diante">Sim, de %1$s em diante</string>
    <string name="De_x_apenas">"Não, apenas de %1$s"</string>
    <string name="Ja_existe_uma_despesa_com_o_esse_nome_em_x">Já existe uma despesa com o esse nome em %1$s</string>
    <string name="Essa_despesa_nao_se_repete">Essa despesa não se repete</string>
    <string name="Editar_despesa">Editar despesa</string>
    <string name="X_eh_uma_despesa_recorrente_deseja_atualizar_todas_as_copias_de_y_em_diante"><![CDATA[<b>%1$s</b> é uma despesa recorrente.\nDeseja atualizar todas as cópias de <b>%2$s</b> em diante?]]></string>
    <string name="x_de_y">%1$s de %2$d</string>
    <string name="_ate_x">" até %1$s"</string>
    <string name="Data_limite_nao_especificada_ou_invalida">Data limite não especificada ou inválida.</string>

</resources>