<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="24dp">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/repetir_"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="false"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/repetir"
            style="@style/TextInputEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/vec_repetir"
            android:hint="@string/Repetir_a_cada"
            android:imeOptions="actionNext"
            android:inputType="textCapSentences"
            android:singleLine="true"
            android:text="@string/_1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/repetir_"
        app:singleSelection="true">

        <Button
            android:id="@+id/dias"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Dia_s" />

        <Button
            android:id="@+id/meses"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Mes_es" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/data_limite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:checked="true"
        android:drawableStart="@drawable/vec_data"
        android:drawablePadding="16dp"
        android:paddingStart="12dp"
        android:paddingTop="4dp"
        android:paddingEnd="8dp"
        android:paddingBottom="4dp"
        android:text="@string/Indeterminadamente"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toggleButton" />


</androidx.constraintlayout.widget.ConstraintLayout>